[package]
name = "pdf-wasm"
version = "0.0.2"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
# lopdf = { version = "0.36.0"}
lopdf = {version = "*", path = "deps/lopdf"}

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"

[target.'cfg(not(all(target_env = "musl")))'.dependencies.mimalloc]
version = "0.1"
features = ["secure"]

[[bin]]
name = "pdf-wasm"
path = "src/cli.rs"

[lib]
name = "ld_"
path = "src/lib.rs"

[profile.release]
lto = false
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1