[package]
name = "pdf-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lopdf = {version = "*", path = "deps/lopdf"}
chrono = "0.4"

[[bin]]
name = "pdf-wasm"
path = "src/cli.rs"

[lib]
name = "ld_"
path = "src/lib.rs"

[profile.release]
lto = false
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1