[package]
name = "pdf-wasm-bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3", features = ["wasm_js"] }
pdf-wasm = { version = "*", path = ".." }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1